src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__external_global_variable_generates_as_external.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 66
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type {}

@gX = available_externally global i16
@gY = available_externally global i8
@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  ret void
}

