src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__external_program_global_var_is_external.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 47
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i32, i32 }

@prg_instance = available_externally global %prg_interface

declare void @prg(%prg_interface*)

