src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_with_two_parameters_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define i32 @foo(i32 %0, i8 zeroext %1) {
entry:
  %foo = alloca i32, align [filtered]
  %bar = alloca i32, align [filtered]
  store i32 %0, ptr %bar, align [filtered]
  %buz = alloca i8, align [filtered]
  store i8 %1, ptr %buz, align [filtered]
  store i32 0, ptr %foo, align [filtered]
  store i32 1, ptr %foo, align [filtered]
  %foo_ret = load i32, ptr %foo, align [filtered]
  ret i32 %foo_ret
}

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %call = call i32 @foo(i32 2, i8 zeroext 1)
  store i32 %call, ptr %x, align [filtered]
  ret void
}
