src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_with_var_inout.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 1675
expression: result

---
; ModuleID = 'main'
source_filename = "main"

define i16 @foo(i16 %0, i16* %1) {
entry:
  %2 = alloca i16, align 2
  store i16 %0, i16* %2, align 2
  %3 = alloca i16*, align 8
  store i16* %1, i16** %3, align 8
  %foo = alloca i16, align 2
  store i16 0, i16* %foo, align 2
  %deref = load i16*, i16** %3, align 8
  %load_inout = load i16, i16* %deref, align 2
  %4 = sext i16 %load_inout to i32
  %tmpVar = add i32 %4, 3
  %5 = trunc i32 %tmpVar to i16
  store i16 %5, i16* %foo, align 2
  %foo_ret = load i16, i16* %foo, align 2
  ret i16 %foo_ret
}

