src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_with_varargs_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i32 }
%foo_interface = type {}

@prg_instance = global %prg_interface zeroinitializer

declare i32 @foo(%foo_interface*, ...)

define void @prg(%prg_interface* %0) {
entry:
  %x = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %foo_instance = alloca %foo_interface, align 8
  br label %input

input:                                            ; preds = %entry
  %load_x = load i32, i32* %x, align 4
  %tmpVar = add i32 %load_x, 1
  br label %call

call:                                             ; preds = %input
  %call1 = call i32 (%foo_interface*, ...) @foo(%foo_interface* %foo_instance, i1 false, i32 3, i32 %tmpVar)
  br label %output

output:                                           ; preds = %call
  br label %continue

continue:                                         ; preds = %output
  store i32 %call1, i32* %x, align 4
  ret void
}

